# SpaceShooter

./: CMakeLists.txt  README.md  alien.cpp  alien.h  bullet.cpp  bullet.h  game.cpp  game.h  main.cpp  player.cpp  player.h  progress_bar.cpp  progress_bar.h
Textures/:  bullet.piskel  alien.piskel  ship.piskel
